[package]
name = "aoc-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
linemux = "0.3.0"
rcon = {version = "0.6.0", features = ["rt-tokio"]}
regex = "1.12.3"
serde = {version = "1.0.228", features = ["derive"]}
tokio = {version = "1.50.0", features = ["full"] }
toml = "1.0.6"
axum = "0.7"
craftping = { version = "0.6", features = ["async-tokio"] }